tests/neg/tuplePatDef.scala

object Test {
  val (x,y): (String, Int) = null // error: unreachable
}
